# asgard

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  JMadsen-code-improved.cpp  LICENSE  LICENSE.txt  README.md  paper.md  trash.txt
.github/: pull_request_template.md
.github/workflows/: ci_tests.yaml
contrib/: FindLINALG.cmake  contrib.cmake  io.cmake  openblas.patch
contrib/catch2/include/: catch.hpp
contrib/clara/: clara.hpp
contrib/highfive/: CTestTestfile.cmake  HighFiveConfigVersion.cmake  HighFiveTargets.cmake  cmake_install.cmake
contrib/kronmult/src/kronmult-ext/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  kgemm_nn.cpp  kgemm_nn.hpp  kgemm_nn_batched.cpp  kgemm_nn_batched.hpp  kgemm_nn_test  kgemm_nt.cpp  kgemm_nt.hpp  kgemm_nt_batched.cpp  kgemm_nt_batched.hpp  kgemm_nt_test  kroncommon.hpp  kronmult1.hpp  kronmult1_batched.cpp  kronmult1_batched.hpp  kronmult1_pbatched.cpp  kronmult1_pbatched.hpp  kronmult1_xbatched.cpp  kronmult1_xbatched.hpp  kronmult2.hpp  kronmult2_batched.cpp  kronmult2_batched.hpp  kronmult2_pbatched.cpp  kronmult2_pbatched.hpp  kronmult2_xbatched.cpp  kronmult2_xbatched.hpp  kronmult3.hpp  kronmult3_batched.cpp  kronmult3_batched.hpp  kronmult3_pbatched.cpp  kronmult3_pbatched.hpp  kronmult3_xbatched.cpp  kronmult3_xbatched.hpp  kronmult4.hpp  (+28 more)
contrib/kronmult/tmp/: kronmult-ext-cfgcmd.txt
doxygen/: CMakeLists.txt  asgard.css
paper/: paper.bib  paper.md
processing/: readh5.m  readh5_2d.m  readh5_2d_6p1b.m  readh5_4p1b.m  readh5_4p2.m  readh5_4p3.m  readh5_4p4.m  readh5_4p5.m  readh5_5p1.m
profiling/: profiling.cmake
profiling/perf_predict/: README.md  config.py  main.py  options.py  requirements.txt
profiling/perf_predict/builder/: README.md  fileio.py  main.py  mem_predictor.py  options.py  predictor.py  time_predictor.py
profiling/perf_predict/profiler/: README.md  fileio.py  git.py  graph.py  main.py  massif.py  options.py  profile.py  regression.py  spreadsheet.py  timer.py
scripts/: read_output.py
scripts/matlab/: electric.m  plot_fval.m  vlasov_params.m  wait_for_plots.m
src/: adapt.cpp  adapt.hpp  adapt_tests.cpp  apply_fmwt.cpp  apply_fmwt.hpp  apply_fmwt_tests.cpp  asgard_dimension.cpp  asgard_dimension.hpp  asgard_dimension_tests.cpp  asgard_discretization.cpp  asgard_discretization.hpp  asgard_discretization_tests.cpp  asgard_field.cpp  asgard_field.hpp  asgard_field_tests.cpp  asgard_grid_1d.hpp  asgard_indexset.cpp  asgard_indexset.hpp  asgard_indexset_tests.cpp  asgard_kronmult.hpp  asgard_kronmult_benchmark.cpp  asgard_kronmult_matrix.cpp  asgard_kronmult_matrix.hpp  asgard_kronmult_matrix_tests.cpp  asgard_kronmult_tests.cpp  asgard_kronmult_tests.hpp  asgard_matrix.hpp  asgard_mpi.h  asgard_pde_system.cpp  asgard_pde_system.hpp  asgard_pde_system_tests.cpp  asgard_resources.cpp  asgard_resources.hpp  asgard_resources_cuda.cpp  asgard_resources_cuda.tpp  asgard_resources_host.cpp  asgard_resources_host.tpp  asgard_resources_tests.cpp  asgard_vector.hpp  basis.cpp  (+140 more)
src/device/: asgard_cusparse.hpp  asgard_glkronmult_cpu.cpp  asgard_glkronmult_gpu.cpp  asgard_kronmult.cpp  asgard_kronmult.hpp  asgard_kronmult1d.hpp  asgard_kronmult2d.hpp  asgard_kronmult3d.hpp  asgard_kronmult4d.hpp  asgard_kronmult_common.hpp  asgard_kronmult_cpu.cpp  asgard_kronmult_cpu_general.cpp  asgard_kronmult_cpu_general.hpp  asgard_kronmult_cpu_kernels.hpp  asgard_kronmult_cycle1.hpp  asgard_kronmult_cycle2.hpp  asgard_kronmult_cyclex.hpp  asgard_kronmult_v2.cpp  asgard_kronmult_v2.hpp  asgard_preconditioner_gpu.cpp  asgard_spkronmult.cpp  asgard_spkronmult_cpu.cpp  asgard_spkronmult_cpu_general.hpp  asgard_spkronmult_cycle1.hpp  asgard_spkronmult_cycle2.hpp  asgard_spkronmult_cyclex.hpp  kronmult_cuda.cpp  kronmult_cuda.hpp  kronmult_cuda_tests.cpp
src/pde/: mirror_common.hpp  pde.hpp  pde_advect_blob1.hpp  pde_advect_blob2.hpp  pde_advect_blob3.hpp  pde_advect_blob4.hpp  pde_advection1.hpp  pde_all.hpp  pde_base.hpp  pde_collisional_landau.hpp  pde_collisional_landau_1x2v.hpp  pde_collisional_landau_1x3v.hpp  pde_continuity1.hpp  pde_continuity2.hpp  pde_continuity3.hpp  pde_continuity6.hpp  pde_diffusion1.hpp  pde_diffusion2.hpp  pde_fokkerplanck1_4p1a.hpp  pde_fokkerplanck1_4p1b.hpp  pde_fokkerplanck1_4p2.hpp  pde_fokkerplanck1_4p3.hpp  pde_fokkerplanck1_4p4.hpp  pde_fokkerplanck1_4p5.hpp  pde_fokkerplanck1_5p1.hpp  pde_fokkerplanck1_pitch_C.hpp  pde_fokkerplanck1_pitch_E.hpp  pde_fokkerplanck2_6p1.hpp  pde_fokkerplanck2_complete.hpp  pde_mirror3.hpp  pde_relaxation_1x1v.hpp  pde_relaxation_1x2v.hpp  pde_relaxation_1x3v.hpp  pde_riemann_1x2v.hpp  pde_riemann_1x3v.hpp  pde_two_stream.hpp  pde_two_stream_1x2v.hpp  pde_vlasov_lb_full_f.hpp
testing/: sandbox.cpp  tests_general.cpp  tests_general.hpp
testing/automated/: bench.txt  bench_cpu.txt  bench_gpu.txt  clang-format-check-patch.sh  clang-format-check.sh  format-check.sh  performance-regression-check.py
testing/generated-inputs/time_advance/: continuity6_sg_l2_d3_t0.dat.tmp
testing/generated-inputs/transformations/: multiwavelet_1_g0  multiwavelet_1_h0  multiwavelet_1_phi_co  multiwavelet_1_scale_co  multiwavelet_3_g0  multiwavelet_3_h0  multiwavelet_3_phi_co  multiwavelet_3_scale_co
testing/scripts/: generate_test_data.m
testing/scripts/batch/: ApplyA.m  GlobalMatrixSG_SlowVersion.m  checkPDE.m  checkPartialTerm.m  checkTerms.m  coeff_matrix2.m  continuity1_updated.m  continuity2_updated.m  continuity3_updated.m  continuity6_updated.m  default_term_diff.m  default_term_grad.m  default_term_mass.m  getCoeffMats.m  kron_multd.m  kron_multd_full.m  kronmult1.m  kronmult2.m  kronmult3.m  kronmult4.m  kronmult5.m  kronmult6.m  lin_dlegendre.m  lin_legendre.m  lin_legendre2.m  term_fill.m
testing/scripts/coefficients/: coeff_matrix.m
testing/scripts/connectivity/: Connect1D.m  ConnectnD.m
testing/scripts/element_table/: HashTable.m  LevCell2index.m  LevCell2index_set.m
testing/scripts/matlab_utilities/: writeToFile.m
(+37 files in other folders)
